# blackjack-rs

./: README.md
.github/workflows/: build.yml  release.yml
client/: Cargo.toml
client/src/: card.rs  game.rs  main.rs  player.rs  player_input.rs  ui.rs  web_socket.rs
server/: Cargo.toml
server/src/: card.rs  client.rs  game.rs  handlers.rs  main.rs  thread_pool.rs  web_socket.rs
shared/: Cargo.toml
shared/src/: card.rs  helpers.rs  lib.rs  player.rs  web_socket.rs
