[package]
name = "blackjack-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc = "2"
rand = "0.8.5"
blackjack-shared = {path ="../shared"}
reqwest = { version = "0.11.25", features = ["json"] }
tokio = {version = "1.36.0", features= ["full"]}
serde = "1.0.197"
serde_json = "1.0.114"
color-eyre = "0.6.2"
tungstenite = "0.21.0"
url = "2.5.0"
