[package]
name = "blackjack-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
blackjack-shared = {path ="../shared"}
color-eyre = "0.6.2"
tokio = {version = "1.36.0", features= ["full"]}
tokio-stream = "0.1.14"
uuid = {version = "1.7.0", features = ["serde", "v4"]}
warp = "0.3.6"
futures = {version = "0.3.30", default-features = false}
